test/positive/feature_eagerbooleanoperations.java

public class feature_eagerbooleanoperations {
  public feature_eagerbooleanoperations() {}
  public boolean m(boolean x) {
    return (x & true) | !x;
  }
}

