test/negative/feature_volatile.java

  public class feature_volatile {
    public feature_volatile() {}
    public volatile int x;
  }

